Stop hiding trees on small screens

--- a/css/home.css
+++ b/css/home.css
@@ -315,9 +315,4 @@ canvas#tree {
     #control-panel {
         display: none;
     }
-    canvas#tree {
-        display: none;
-    }
-}
-@media (max-width: 850px) {
 }
